tcpl v2.0.2
==============
* Updated tcplLoadChem to return dsstox substance ids
* Moved data.table to imports instead of depends
* Added new level 6 method for flagging viability gnls winners

tcpl v2.0.1
==============
Updated vignettes to use tempdir and thus not write to install folder.


tcpl v2.0
==============

Major change for tcpl v2.0:
* Incorporation of tcplLite into the package, a functionality that allows the user to work from local files formatted like invitrodb tables, rather than a MySQL database.
	* Using tcplLite is ideal for handling smaller datasets. 
	* The SQLite driver was removed from the package.
	* tcplConf() default is now for tcplLite, which uses .csv files rather than tables in a MySQL database. 
	* The MySQL driver is available and recommended for interacting with the entire dataset as a database. 
	* The package vignettes run using tcplLite.
Additional updates for tcpl v2.0
* tcplLvlCount: function added to count the samples at each level of processing for each aeid.
* Addition of mc4 methods: the baseline median absolute deviation can now be calculated based on the lowest two concentrations or on the neutral control wells. An mc4 method must now be assigned for analysis.
* tcplGetAeid: function added to find assays based on matching a character string within any assay endpoint name.
* tcplMakeAeidMultiPlts: 3x2 grid of plots on each page of a PDF, for a single aeid.
* tcplMakeChidMultiPlts: 3x2 grid of plots on each page of a PDF, for a single chemical id (chid).
* Vignettes are now posted as html from RMarkdown files for Introduction and appendices, data retrieval, and data processing.
* Various bug fixes and additions to the methods tables.

tcpl v1.4.0
==============

Changes from v1.2.2
  
* .plotFit (not exported) was updated to work with the new behavior of `nchar`
  for R>3.3 (PR#10/#26)
  
* tcplPlotPlate now works with single-conc data. Previously it only worked with
  the multi-conc data. (PR#14)
  